src/css/sections/_category-masonry.css
.home .masonry {
  display: grid;
  grid-template-columns: 1fr 1fr;
  text-decoration: none;
}

.masonry img {
  object-fit: cover;
  width: 100%;
  height: 10rem;
}

/* Reverse column */
.home .masonry:nth-child(even) > .right-content {
  grid-column: 1;
  grid-row: 1;
}

.spacer {
  height: 2rem;
}
.masonry .right-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 10px;
}
.masonry h2 {
  margin-top: 0;
  text-decoration: none;
}
.masonry p {
  height: 5rem;
  line-height: 1rem;
  overflow: hidden;
  justify-content: justify;
}
/* Should think about @mixin */
.masonry:nth-child(even) .cta  {
  background: url("https://www.andyhooke.co.uk/wp-content/uploads/2018/02/yellow-brushstroke.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: 44px;
  line-height: 44px;
  padding: 15px;

}

.cta:nth-child(odd) {
  background: linear-gradient(
      rgba(250, 250, 250, 0.4),
      rgba(255, 255, 255, 0.3)
    ),
    url("/src/assets/images/button/green\ brush\ stroke.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: 44px;
  line-height: 44px; 
  padding: 15px;
}

@media screen and (min-width: 768px) {
  .masonry .right-content {
    padding: 15px;

  }
  .masonry img {
    height: 19rem;
  }
}

@media screen and (min-width: 1100px) {
  .masonry img {
    height: 20rem;
  }
}

